fixed element selection on safari

--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,15 @@
     --grid-rows: 1;
 }
 
+body {
+    user-select: none;
+    -webkit-user-select: none;
+}
+
 #container {
     display: grid;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
-    user-select: none;
 }
 
 .grid-item {
